--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,4 +5,8 @@ authors = ["Andrew Hayford <emailandrewhayford@gmail.com>"]
 
 [dependencies]
 rocket = "^0.3.0"
-rocket_codegen = "*"
+rocket_codegen = "^0.3.0"
+rocket_contrib = { version = "^0.3.0", features = ["json"] }
+serde = "1.0"
+serde_json = "1.0"
+serde_derive = "1.0"
